Fix: overflow de Search

--- a/src/pages/Search/Search.css
+++ b/src/pages/Search/Search.css
@@ -76,6 +76,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow-y: auto;
   padding: 50px;
 }
 
